<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.Fragment_EditProfile" >

    <RelativeLayout
        android:id="@+id/FragmentRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearFragment"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="User Name" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=".." />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text=".." />

            <Button
                android:id="@+id/EditName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_ui"
                android:text="Change Name" />

        </LinearLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:background="@drawable/backgroud"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <ImageView
            android:id="@+id/navHeaderImage3"
            android:layout_width="141dp"
            android:layout_height="166dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="128dp"
            android:layout_marginLeft="128dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="142dp"
            android:layout_marginRight="142dp"
            android:layout_marginBottom="183dp"
            android:src="@drawable/ic_edit" />

        <Button
            android:id="@+id/EditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/toolbar3"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="104dp"
            android:layout_marginLeft="104dp"
            android:layout_marginEnd="102dp"
            android:layout_marginRight="102dp"
            android:layout_marginBottom="59dp"
            android:background="@drawable/bg_ui"
            android:text="Change picture" />
    </RelativeLayout>

</FrameLayout>