...
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Forgot Password?"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btnSignUpValue"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_corner_buttom"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="sign up"
            android:textColor="#777" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="30dp"
...
